--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -27,7 +27,7 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Вы уверены, что хотите выйти из аккаунта Mega Hack?",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "Вы уверенны, что хотите загрузить настройки 8 версии? Это перезапишет ваши нынешние настройки",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "Выход из аккаунта успешен! Вы можете использовать Mega Hack до перезапуска игры",
-  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "Вы уверены, что хотите отключить все включенные читы?",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Пожалуйста, вы должны выйти из редактора или уровня прежде чем включать полноэкранный режим",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Ваш макрос содержит несохраненные изменения, вы уверены, что хотите очистить его и начать заново?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Вы уверены, что хотите удалить выбранный макрос?",
@@ -69,8 +69,8 @@
   "KEYBINDS/DISABLE_IN_EDITOR/TIP": "Отключает горячие клавиши Mega Hack внутри редактора уровней",
   "KEYBINDS/EMPTY": "Не выбрано",
   "BYPASS": "Обход",
-  "BYPASS/HACK_ANTI_KICK": "",
-  "BYPASS/HACK_ANTI_KICK/TIP": "",
+  "BYPASS/HACK_ANTI_KICK": "Анти-кик",
+  "BYPASS/HACK_ANTI_KICK/TIP": "Предотвращает кик с определённых уровней",
   "BYPASS/HACK_MAIN_LEVELS": "Официальные уровни",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Открывает доступ к основным уровням",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Настройка музыки",
@@ -123,8 +123,8 @@
   "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "Выключает эффект призрачного следа",
   "COSMETIC/HACK_NO_GLOW": "Без свечения",
   "COSMETIC/HACK_NO_GLOW/TIP": "Отключает эффект свечения вокруг всех объектов",
-  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "",
-  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": 'Без плашки "New Best"',
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": 'Выключает плашку "New Best" и уменьшает время возрождения',
   "COSMETIC/HACK_NO_MIRROR": "Без отражения",
   "COSMETIC/HACK_NO_MIRROR/TIP": "Отключает эффект от порталов отражения",
   "COSMETIC/HACK_NO_ORB_RING": "Без колец орбов",
@@ -168,8 +168,8 @@
   "COSMETIC/HACK_NO_SHADERS/TIP": "Отключает все шейдеры в уровне",
   "COSMETIC/HACK_NO_SHAKE": "Без тряски",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Отключает шейк триггеры",
-  "COSMETIC/HACK_NO_SPIDER_DASH": "",
-  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
+  "COSMETIC/HACK_NO_SPIDER_DASH": "Без деша паука",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "Выключает след паука при телепортации",
   "COSMETIC/HACK_NO_TRAIL": "Без следа",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Всегда отключает след игрока",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Без пульсации волны",
@@ -378,8 +378,8 @@
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "Время возрождения",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME/TIP": "Меняет время возрождения",
   "LEVEL/RESPAWN_TIME/DROPDOWN/IGNORE_SPEEDHACK": "Игнорировать спидхак",
-  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
-  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "Выровнить по оси",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "Показывает выровненные по оси хитбоксы у повёрнутых объектов",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Заполнять хитбоксы их цветом",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Опасные",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Прозрачность",
@@ -535,7 +535,7 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "Классическая реализация полноэкранного режима (Отличается от реализации в самой игре)",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Полный экран",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "Разрешает игре работать в полноэкранном режиме",
-  "DISPLAY/FULLSCREEN/COMBO": "",
+  "DISPLAY/FULLSCREEN/COMBO": "Режим",
   "DISPLAY/FULLSCREEN/COMBO/0": "Эксклюзивный",
   "DISPLAY/FULLSCREEN/COMBO/1": "Без полей",
   "UTILITY": "Разное",
@@ -560,7 +560,7 @@
   "SCREENSHOT": "Снимок экрана",
   "SCREENSHOT/SCREENSHOT": "Снимок экрана",
   "SCREENSHOT/SCREENSHOT/TIP": "Создает снимок экрана",
-  "SCREENSHOT/COMBO": "",
+  "SCREENSHOT/COMBO": "Режим захвата",
   "SCREENSHOT/COMBO/0": "Сохранить и скопировать",
   "SCREENSHOT/COMBO/1": "Скопировать в буфер обмена",
   "SCREENSHOT/COMBO/2": "Сохранить в файл",
@@ -605,7 +605,7 @@
   "STATUS/*/POSITION/3": "Снизу справа",
   "STATUS/*/MOVE/DOWN": "Вниз",
   "STATUS/*/MOVE/UP": "Вверх",
-  "STATUS/*/PREFIX": "",
+  "STATUS/*/PREFIX": "Показывать префикс",
   "STATUS/*/UNITS": "Показывать единицы измерения",
   "STATUS/MESSAGE/ENABLED": "Сообщение",
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Сообщение",
@@ -618,7 +618,7 @@
   "STATUS/CPS/DROPDOWN/TOTAL": "Общее количество кликов",
   "STATUS/BEST_RUN/ENABLED": "Лучший прогресс",
   "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "Точные проценты",
-  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "",
+  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "Только с данного %",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Точность",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Показывать префикс",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Смерти",
@@ -631,7 +631,7 @@
   "STATUS/FRAME/ENABLED": "Счётчик кадров",
   "STATUS/POSITION/ENABLED": "Позиция",
   "STATUS/REPLAY_STATE/ENABLED": "Состояние воспроизведения",
-  "STATUS/SESSION_TIME/ENABLED": "",
+  "STATUS/SESSION_TIME/ENABLED": "Время сессии",
   "REPLAY": "Макрос",
   "REPLAY/FILE": "Выбрать макрос",
   "REPLAY/OPEN": "Открыть макрос",
