--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -123,8 +123,8 @@
   "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "Выключает эффект призрачного следа",
   "COSMETIC/HACK_NO_GLOW": "Без свечения",
   "COSMETIC/HACK_NO_GLOW/TIP": "Отключает эффект свечения вокруг всех объектов",
-  "COSMETIC/HACK_NO_NEW_BEST_POPUP": 'Без плашки "New Best"',
-  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": 'Выключает плашку "New Best" и уменьшает время возрождения',
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "Без плашки New Best",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "Выключает плашку New Best и уменьшает время возрождения",
   "COSMETIC/HACK_NO_MIRROR": "Без отражения",
   "COSMETIC/HACK_NO_MIRROR/TIP": "Отключает эффект от порталов отражения",
   "COSMETIC/HACK_NO_ORB_RING": "Без колец орбов",
