--- a/langs/en-GB.json
+++ b/langs/en-GB.json
@@ -115,6 +115,8 @@
   "COSMETIC/HACK_NO_CAMERA/TIP": "Disables camera movement triggers",
   "COSMETIC/HACK_NO_CAMERA_ZOOM": "No Camera Zoom",
   "COSMETIC/HACK_NO_CAMERA_ZOOM/TIP": "Disables camera zoom triggers",
+  "COSMETIC/HACK_NO_DASH_FIRE": "No Dash Fire",
+  "COSMETIC/HACK_NO_DASH_FIRE/TIP": "Hides the dash trail fire effect",
   "COSMETIC/HACK_NO_DEATH_EFFECT": "No Death Effect",
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "No visual effects on death",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "No Do Not Flip",
@@ -228,6 +230,11 @@
   "CREATOR/HACK_TRIGGER_VALUE_BYPASS/TIP": "Bypasses trigger control limits",
   "CREATOR/HACK_VERIFY_HACK": "Verify Hack",
   "CREATOR/HACK_VERIFY_HACK/TIP": "Lets you upload unverified levels",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/HACK_MULTIPLE_EDITOR_TRAILS": "Multiple Editor Trails",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_ALL": "Clear All",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_LASTEST": "Clear Lastest",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "Clear Oldest",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "Transparency",
   "LEVEL": "Level",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Deafen at",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "Deafen at",
@@ -387,6 +394,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/SUF": "%",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "Passable",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "Player",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "Player Collision Block",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "Show Active Only",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "Solids",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "Specials",
@@ -535,7 +543,6 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "Classic implementation of borderless fullscreen (separate to GD's own implementation)",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Fullscreen",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "Allows the game to fill your main display",
-  "DISPLAY/FULLSCREEN/COMBO": "Mode",
   "DISPLAY/FULLSCREEN/COMBO/0": "Exclusive",
   "DISPLAY/FULLSCREEN/COMBO/1": "Borderless",
   "UTILITY": "Utility",
@@ -560,7 +567,7 @@
   "SCREENSHOT": "Screenshot",
   "SCREENSHOT/SCREENSHOT": "Screenshot",
   "SCREENSHOT/SCREENSHOT/TIP": "Takes a screenshot",
-  "SCREENSHOT/COMBO": "Capture Mode",
+  "SCREENSHOT/COMBO": "Mode",
   "SCREENSHOT/COMBO/0": "Save & copy",
   "SCREENSHOT/COMBO/1": "Copy to clipboard",
   "SCREENSHOT/COMBO/2": "Save to file",
