--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -115,6 +115,8 @@
   "COSMETIC/HACK_NO_CAMERA/TIP": "Отключает триггеры, которые влияют на движение камеры",
   "COSMETIC/HACK_NO_CAMERA_ZOOM": "Без приближения камеры",
   "COSMETIC/HACK_NO_CAMERA_ZOOM/TIP": "Отключает триггеры, отвечающие за приближение и отдаление камеры",
+  "COSMETIC/HACK_NO_DASH_FIRE": "",
+  "COSMETIC/HACK_NO_DASH_FIRE/TIP": "",
   "COSMETIC/HACK_NO_DEATH_EFFECT": "Без эффекта смерти",
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Отключает визуальные эффекты смерти",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Без Do Not",
@@ -228,6 +230,11 @@
   "CREATOR/HACK_TRIGGER_VALUE_BYPASS/TIP": "Обходит лимит значений в большинстве триггеров",
   "CREATOR/HACK_VERIFY_HACK": "Обход верификации",
   "CREATOR/HACK_VERIFY_HACK/TIP": "Позволяет выкладывать уровни без верификации",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/HACK_MULTIPLE_EDITOR_TRAILS": "",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_ALL": "",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_LASTEST": "",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "",
   "LEVEL": "Уровень",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Заглушить звук на",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "Заглушить звук на",
@@ -387,6 +394,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/SUF": "%",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "Проходимые",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "Игрок",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "Только активные",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "Твёрдые",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "Специальные",
@@ -535,7 +543,6 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "Классическая реализация полноэкранного режима (Отличается от реализации в самой игре)",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Полный экран",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "Разрешает игре работать в полноэкранном режиме",
-  "DISPLAY/FULLSCREEN/COMBO": "Режим",
   "DISPLAY/FULLSCREEN/COMBO/0": "Эксклюзивный",
   "DISPLAY/FULLSCREEN/COMBO/1": "Без полей",
   "UTILITY": "Разное",
