--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -35,7 +35,7 @@
   "MESSAGE/REPLAY/SAVE": "매크로의 변경 사항을 저장하시겠습니까?",
   "MESSAGE/KEYBINDS/EMPTY": "먼저 키를 설정해 주세요.",
   "GM_VAR/0060": "기본 미니 아이콘",
-  "GM_VAR/0061": "거미 대시 전환",
+  "GM_VAR/0061": "스파이더 대시 전환",
   "GM_VAR/0062": "대시 불꽃 전환",
   "GM_VAR/0096": "웨이브 트레일 전환",
   "HOME/LANGUAGE": "언어",
@@ -115,12 +115,14 @@
   "COSMETIC/HACK_NO_CAMERA/TIP": "카메라 이동 트리거를 비활성화합니다.",
   "COSMETIC/HACK_NO_CAMERA_ZOOM": "카메라 줌 비활성화",
   "COSMETIC/HACK_NO_CAMERA_ZOOM/TIP": "카메라 줌 트리거를 비활성화합니다.",
+  "COSMETIC/HACK_NO_DASH_FIRE": "대시 불꽃 이펙트 숨기기",
+  "COSMETIC/HACK_NO_DASH_FIRE/TIP": "대시 트레일 불꽃 이펙트를 숨깁니다.",
   "COSMETIC/HACK_NO_DEATH_EFFECT": "사망 이펙트 비활성화",
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "사망 시 시각 이펙트를 없앱니다.",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "뒤집기 비활성화",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "시도 횟수와 레벨 클리어 텍스트를 뒤집지 않습니다.",
   "COSMETIC/HACK_NO_GHOST_TRAIL": "유령 트레일 제거",
-  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "플레이어의 유령 트레일 효과를 비활성화합니다.",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "플레이어의 유령 트레일 이펙트를 비활성화합니다.",
   "COSMETIC/HACK_NO_GLOW": "글로우 비활성화",
   "COSMETIC/HACK_NO_GLOW/TIP": "모든 오브젝트의 글로우 이펙트를 비활성화합니다.",
   "COSMETIC/HACK_NO_NEW_BEST_POPUP": "New Best 팝업 비활성화",
@@ -169,7 +171,7 @@
   "COSMETIC/HACK_NO_SHAKE": "흔들기 비활성화",
   "COSMETIC/HACK_NO_SHAKE/TIP": "흔들기 트리거를 비활성화합니다.",
   "COSMETIC/HACK_NO_SPIDER_DASH": "거미 대시 비활성화",
-  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "순간이동 시 거미 대시 효과를 비활성화합니다.",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "순간이동 시 거미 대시 이펙트를 비활성화합니다.",
   "COSMETIC/HACK_NO_TRAIL": "트레일 비활성화",
   "COSMETIC/HACK_NO_TRAIL/TIP": "트레일을 항상 꺼짐으로 설정합니다.",
   "COSMETIC/HACK_NO_WAVE_PULSE": "웨이브 펄스 비활성화",
@@ -228,6 +230,11 @@
   "CREATOR/HACK_TRIGGER_VALUE_BYPASS/TIP": "트리거 제어 한계를 우회합니다.",
   "CREATOR/HACK_VERIFY_HACK": "베리파이 핵",
   "CREATOR/HACK_VERIFY_HACK/TIP": "베리파이되지 않은 레벨을 업로드할 수 있습니다.",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/HACK_MULTIPLE_EDITOR_TRAILS": "다중 에디터 트레일",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_ALL": "모두 지우기",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_LASTEST": "최신 항목 지우기",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "가장 오래된 항목 지우기",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "투명도",
   "LEVEL": "레벨",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "다음에서 음소거",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "음소거",
@@ -387,6 +394,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/SUF": "%",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "통과 가능",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "플레이어",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "플레이어 충돌 차단",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "활성 상태만 표시",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "고체",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "특수",
@@ -535,7 +543,6 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "테두리 없는 전체 화면을 클래식으로 구현합니다.(GD 자체 구현과 별개)",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "전체 화면",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "게임이 기본 디스플레이를 가득 채웁니다.",
-  "DISPLAY/FULLSCREEN/COMBO": "모드",
   "DISPLAY/FULLSCREEN/COMBO/0": "독점",
   "DISPLAY/FULLSCREEN/COMBO/1": "테두리 없는 창 모드",
   "UTILITY": "유틸리티",
