Update translation for 'Spider Dash Switch'

--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -35,7 +35,7 @@
   "MESSAGE/REPLAY/SAVE": "매크로의 변경 사항을 저장하시겠습니까?",
   "MESSAGE/KEYBINDS/EMPTY": "먼저 키를 설정해 주세요.",
   "GM_VAR/0060": "기본 미니 아이콘",
-  "GM_VAR/0061": "스파이더 대시 전환",
+  "GM_VAR/0061": "거미 대시 전환",
   "GM_VAR/0062": "대시 불꽃 전환",
   "GM_VAR/0096": "웨이브 트레일 전환",
   "HOME/LANGUAGE": "언어",
