--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -58,7 +58,7 @@
   "HOME/MISC": "Прочее",
   "HOME/MISC/LICENSES": "Лицензии",
   "HOME/MISC/LOAD_LANG": "Выбрать язык",
-  "HOME/MISC/LOAD_LEGACY_SAVE": "Импортировать сохранение из 8 версии",
+  "HOME/MISC/LOAD_LEGACY_SAVE": "Импортировать сохранение из v8",
   "HOME/MISC/LOGOUT": "Выход из аккаунта",
   "KEYBINDS": "Горячие клавиши",
   "KEYBINDS/SHORTCUT": "Выбрать клавишу",
