Update Swedish translations in sv-SE.json
Updated Swedish translations for various UI elements and features.

--- a/langs/sv-SE.json
+++ b/langs/sv-SE.json
@@ -40,12 +40,12 @@
   "GM_VAR/0096": "",
   "HOME/LANGUAGE": "Språk",
   "HOME/SEARCH": "Sök",
-  "HOME/RULESETS": "",
+  "HOME/RULESETS": "Regler",
   "HOME/RULESETS/SAFE_MODE": "Säkert läge",
   "HOME/ANIM_SPEED": "",
   "HOME/ANIM_SPEED/PRE": "",
   "HOME/ANIM_SPEED/SUF": "",
-  "HOME/CONTRIBUTE_TRANSLATIONS": "",
+  "HOME/CONTRIBUTE_TRANSLATIONS": "Bidra med översättningar",
   "HOME/DOT": "",
   "HOME/DOT/TIP": "",
   "HOME/SHORTCUT/ALT": "",
@@ -54,23 +54,23 @@
   "HOME/SCALE": "",
   "HOME/SCALE/PRE": "",
   "HOME/SCALE/SUF": "",
-  "HOME/THEME": "",
+  "HOME/THEME": "Tema",
   "HOME/MISC": "",
-  "HOME/MISC/LICENSES": "",
-  "HOME/MISC/LOAD_LANG": "",
+  "HOME/MISC/LICENSES": "Licenser",
+  "HOME/MISC/LOAD_LANG": "Ladda språk",
   "HOME/MISC/LOAD_LEGACY_SAVE": "",
-  "HOME/MISC/LOGOUT": "",
-  "KEYBINDS": "",
-  "KEYBINDS/SHORTCUT": "",
-  "KEYBINDS/SET": "",
-  "KEYBINDS/VIEW": "",
-  "KEYBINDS/REMOVE": "",
-  "KEYBINDS/DISABLE_IN_EDITOR": "",
-  "KEYBINDS/DISABLE_IN_EDITOR/TIP": "",
+  "HOME/MISC/LOGOUT": "Logga ut",
+  "KEYBINDS": "Tangentbindningar",
+  "KEYBINDS/SHORTCUT": "Välj tangentbindning",
+  "KEYBINDS/SET": "Välj hack att sätta",
+  "KEYBINDS/VIEW": "Visa tangentbindningar",
+  "KEYBINDS/REMOVE": "Ta bort tangentbindningar",
+  "KEYBINDS/DISABLE_IN_EDITOR": "Inaktivera i editorn",
+  "KEYBINDS/DISABLE_IN_EDITOR/TIP": "Inaktiverar tangentbindningar i editorn",
   "KEYBINDS/EMPTY": "",
   "BYPASS": "Kringgå",
   "BYPASS/HACK_ANTI_KICK": "",
-  "BYPASS/HACK_ANTI_KICK/TIP": "",
+  "BYPASS/HACK_ANTI_KICK/TIP": "Förhindrar att du blockeras från vissa nivåer från spelare",
   "BYPASS/HACK_MAIN_LEVELS": "Huvudnivåer",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Låser upp huvuddemonnivåerna",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Musikupplåsare",
@@ -88,23 +88,23 @@
   "BYPASS/HACK_UNLOCK_VAULTS": "Lås upp valv",
   "BYPASS/HACK_UNLOCK_VAULTS/TIP": "Låser upp alla valv",
   "COSMETIC": "Kosmetiskt",
-  "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "Exakt procent",
+  "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "Tillåter anpassning av antalet decimaler för spelets inställning för procentdecimaler",
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "",
-  "COSMETIC/HACK_BALL_ROTATION_BUG": "",
-  "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "1 decimal",
+  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "2 decimaler",
+  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "3 decimaler",
+  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 decimaler",
+  "COSMETIC/HACK_BALL_ROTATION_BUG": "Bollrotationsbuggen",
+  "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Återskapar 2.0 tunnerullningsbuggen",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Klassiska partiklar",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Återställer klassiska minipartiklar som följde spelaren",
-  "COSMETIC/HACK_CLASSIC_PULSE": "",
-  "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
-  "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "",
-  "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "",
-  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
-  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
+  "COSMETIC/HACK_CLASSIC_PULSE": "Klassisk puls",
+  "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Tillåter pulsering över 60 Hz, liknande pulseringen före 2.1",
+  "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Klassiskt wave spår",
+  "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Återimplementering av 2.1 wave-spåret",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "Frusna animationer",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "Inaktiverar sprite-animationer som roboten och spindeln",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Dölj pausknapp",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Döljer pausknappen när muspekaren visas i spelet",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Dölj pausmenyn",
@@ -115,63 +115,63 @@
   "COSMETIC/HACK_NO_CAMERA/TIP": "Inaktiverar kamerarörelsetriggers",
   "COSMETIC/HACK_NO_CAMERA_ZOOM": "Ingen kamerazoom",
   "COSMETIC/HACK_NO_CAMERA_ZOOM/TIP": "Inaktiverar kamerazoomtriggers",
-  "COSMETIC/HACK_NO_DASH_FIRE": "",
-  "COSMETIC/HACK_NO_DASH_FIRE/TIP": "",
+  "COSMETIC/HACK_NO_DASH_FIRE": "Ingen dash eld",
+  "COSMETIC/HACK_NO_DASH_FIRE/TIP": "Döljer dash-spårets eld-effekt",
   "COSMETIC/HACK_NO_DEATH_EFFECT": "Ingen dödseffekt",
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Inga visuella effekter när spelaren dör",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Ingen 'Do Not' vändning",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Slutar vända texten som visar antal försök och vid avklarad nivå",
-  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
-  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
-  "COSMETIC/HACK_NO_GLOW": "",
-  "COSMETIC/HACK_NO_GLOW/TIP": "",
-  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "",
-  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "",
-  "COSMETIC/HACK_NO_MIRROR": "",
-  "COSMETIC/HACK_NO_MIRROR/TIP": "",
-  "COSMETIC/HACK_NO_ORB_RING": "",
-  "COSMETIC/HACK_NO_ORB_RING/TIP": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "Inget spökspår",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "Inaktiverar spökspår-effekten på spelare",
+  "COSMETIC/HACK_NO_GLOW": "Ingen glöd"",
+  "COSMETIC/HACK_NO_GLOW/TIP": "Inaktiverar glödeffekten på alla objekt",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "Ingen nytt bästa-popup",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "Inaktiverar popup-rutan för nytt personbästa och minskar den förlängda återuppståndelsetiden",
+  "COSMETIC/HACK_NO_MIRROR": "Ingen spegel",
+  "COSMETIC/HACK_NO_MIRROR/TIP": "Inaktiverar spegelportalseffekten",
+  "COSMETIC/HACK_NO_ORB_RING": "Ingen orb-ring",
+  "COSMETIC/HACK_NO_ORB_RING/TIP": "inaktiverar orb-ringen vid beröring",
   "COSMETIC/NO_PARTICLES/HACK_NO_PARTICLES": "Inga partiklar",
   "COSMETIC/NO_PARTICLES/HACK_NO_PARTICLES/TIP": "Inaktiverar delar av partikelsystemet",
   "COSMETIC/NO_PARTICLES/DROPDOWN": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/0": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/1": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/2": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/3": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/4": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/5": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/6": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/7": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/8": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/9": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/10": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/11": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/12": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/13": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/14": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/15": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/16": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/17": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/18": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/19": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/20": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/21": "",
-  "COSMETIC/HACK_NO_PARTICLES_CLASSIC": "",
-  "COSMETIC/HACK_NO_PARTICLES_CLASSIC/TIP": "",
-  "COSMETIC/HACK_NO_PORTAL_CIRCLE": "",
-  "COSMETIC/HACK_NO_PORTAL_CIRCLE/TIP": "",
-  "COSMETIC/HACK_NO_PORTAL_LIGHTNING": "Ingen portalblixt",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/0": "Boost-effekt",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/1": "Bubbeleffekt",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/2": "Stöt-effekt",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/3": "Spräng-effekt",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/4": "Kist-effekter",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/5": "Mynt-effekt",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/6": "Dash-effekt",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/7": "Förstörelse-effekt",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/8": "Drag-effekt",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/9": "Slutportal-effekt",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/10": "Explosions-effekter",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/11": "Eldklots-effekt",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/12": "Fyrverkeri-effekt",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/13": "Glitter",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/14": "Nyckel-effekt",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/15": "Landningseffekt",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/16": "Portal-effekt",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/17": "Ring-effekt",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/18": "Skepps-drag",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/19": "Hastighetseffekt",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/20": "Stjärneffekt",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/21": "Swing-utbrott",
+  "COSMETIC/HACK_NO_PARTICLES_CLASSIC": "Inga partiklar klassiskt",
+  "COSMETIC/HACK_NO_PARTICLES_CLASSIC/TIP": "Inaktiverar partikelsystemet (mestadels)",
+  "COSMETIC/HACK_NO_PORTAL_CIRCLE": "Ingen portal cirkel",
+  "COSMETIC/HACK_NO_PORTAL_CIRCLE/TIP": "Inaktiverar den inre cirkeln vid inträde i en portal",
+  "COSMETIC/HACK_": "Ingen portalblixt",
   "COSMETIC/HACK_NO_PORTAL_LIGHTNING/TIP": "Inaktiverar portalblixt från storleksportaler",
   "COSMETIC/HACK_NO_PULSE": "Ingen puls",
-  "COSMETIC/HACK_NO_PULSE/TIP": "Inaktiverar pulsering på föremål",
+  "COSMETIC/HACK_NO_PULSE/TIP": "Inaktiverar pulsering på objekt",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "Ingen respawn-blixt",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Inaktiverar respawn-blixt- och cirkeleffekten.",
   "COSMETIC/HACK_NO_SHADERS": "Inga shaders",
   "COSMETIC/HACK_NO_SHADERS/TIP": "Inaktiverar nivåns shaders",
   "COSMETIC/HACK_NO_SHAKE": "Ingen skakning",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Inaktiverar skaktriggers",
-  "COSMETIC/HACK_NO_SPIDER_DASH": "",
-  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
+  "COSMETIC/HACK_NO_SPIDER_DASH": "Ingen spindel-dash",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "Inaktiverar spindelns dash-effekt vid teleportering",
   "COSMETIC/HACK_NO_TRAIL": "Inget spår",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Ställer in spåret på alltid avstängt",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Ingen wave-puls",
@@ -180,10 +180,10 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL/TIP": "Inaktiverar hårda wave-spåret, vanliga spåret kvarstår",
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND": "Inget wave-spår bakom",
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Inaktiverar det vanliga spåret bakom wave-spåret",
-  "COSMETIC/HACK_PLAYER_ON_TOP": "",
-  "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "",
-  "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "",
-  "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "",
+  "COSMETIC/HACK_PLAYER_ON_TOP": "Spelare på toppen",
+  "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "Tvingar spelaren (och wave-spåret) att visas över alla objekt",
+  "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "Visa totala försök",
+  "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "Visar det totala antalet försök på nivån istället för antalet försök i sessionen",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Fast wave-spår",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL/TIP": "Inaktiverar blandning på wave-spåret, som det svarta eller vita spåret",
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA": "StartPos Kameraåterställning",
@@ -230,11 +230,11 @@
   "CREATOR/HACK_TRIGGER_VALUE_BYPASS/TIP": "Kringgår triggerkontrollgränser",
   "CREATOR/HACK_VERIFY_HACK": "Verifieringshack",
   "CREATOR/HACK_VERIFY_HACK/TIP": "Tillåter uppladdning av overifierade nivåer",
-  "CREATOR/MULTIPLE_EDITOR_TRAILS/HACK_MULTIPLE_EDITOR_TRAILS": "",
-  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_ALL": "",
-  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_LASTEST": "",
-  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "",
-  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/HACK_MULTIPLE_EDITOR_TRAILS": "Flera redigerarspår",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_ALL": "Rensa allt",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_LASTEST": "Rensa senaste",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "Rensa äldsta",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "Genomskinlighet",
   "LEVEL": "Nivå",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Ljud av vid",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "Ljud av",
@@ -253,13 +253,13 @@
   "LEVEL/AUTO_MUSIC_SYNC/DROPDOWN/THRESHOLD": "Tröskel (ms)",
   "LEVEL/AUTO_MUSIC_SYNC/DROPDOWN/THRESHOLD/PRE": "Tröskel",
   "LEVEL/AUTO_MUSIC_SYNC/DROPDOWN/THRESHOLD/SUF": "ms",
-  "LEVEL/AUTO_KILL/HACK_AUTO_KILL": "",
-  "LEVEL/AUTO_KILL/HACK_AUTO_KILL/TIP": "",
+  "LEVEL/AUTO_KILL/HACK_AUTO_KILL": "Auto död",
+  "LEVEL/AUTO_KILL/HACK_AUTO_KILL/TIP": "Dödar spelaren vid en viss procent (klassisk) eller tid (plattformer)",
   "LEVEL/AUTO_KILL/DROPDOWN/CLASSIC": "",
   "LEVEL/AUTO_KILL/DROPDOWN/CLASSIC/PRE": "",
-  "LEVEL/AUTO_KILL/DROPDOWN/CLASSIC/SUF": "",
+  "LEVEL/AUTO_KILL/DROPDOWN/CLASSIC/SUF": "Klassisk",
   "LEVEL/AUTO_KILL/DROPDOWN/PLATFORMER": "",
-  "LEVEL/AUTO_KILL/DROPDOWN/PLATFORMER/PRE": "",
+  "LEVEL/AUTO_KILL/DROPDOWN/PLATFORMER/PRE": "Tid",
   "LEVEL/AUTO_KILL/DROPDOWN/PLATFORMER/SUF": "",
   "LEVEL/AUTO_MUSIC_SYNC/HACK_AUTO_MUSIC_SYNC": "Automatisk musiksynkronisering",
   "LEVEL/AUTO_MUSIC_SYNC/HACK_AUTO_MUSIC_SYNC/TIP": "Korrigerar musik efter en desync, stödjer endast linjära nivåer med en låt",
@@ -277,29 +277,29 @@
   "LEVEL/FRAME_STEPPER/DROPDOWN/STEP/PRE": "Steg",
   "LEVEL/FRAME_STEPPER/HACK_FRAME_STEPPER": "Frame Stepper",
   "LEVEL/FRAME_STEPPER/HACK_FRAME_STEPPER/TIP": "Tillåter steg framåt och bakåt ruta för ruta",
-  "LEVEL/FORCE_ICE/HACK_FORCE_ICE": "",
-  "LEVEL/FORCE_ICE/HACK_FORCE_ICE/TIP": "",
-  "LEVEL/FORCE_ICE/DROPDOWN/DISABLE": "",
+  "LEVEL/FORCE_ICE/HACK_FORCE_ICE": "Tvinga is",
+  "LEVEL/FORCE_ICE/HACK_FORCE_ICE/TIP": "Tvingar alla block att vara isblock (eller inte is om inaktiverat)",
+  "LEVEL/FORCE_ICE/DROPDOWN/DISABLE": "Inaktivera is",
   "LEVEL/HACK_0_PRACTICE_COMPLETE": "0% klarar i övningsläge",
   "LEVEL/HACK_0_PRACTICE_COMPLETE/TIP": "Klara en nivå i ett försök i övningsläget",
   "LEVEL/HACK_ALL_MODES_PLATFORMER": "Alla spellägen i plattformsnivåer",
   "LEVEL/HACK_ALL_MODES_PLATFORMER/TIP": "Aktiverar alla spellägen på plattformsnivåer",
-  "LEVEL/HACK_ALLOW_PAUSE_BUFFERING": "",
-  "LEVEL/HACK_ALLOW_PAUSE_BUFFERING/TIP": "",
+  "LEVEL/HACK_ALLOW_PAUSE_BUFFERING": "Tillåt paus-buffring",
+  "LEVEL/HACK_ALLOW_PAUSE_BUFFERING/TIP": "Inaktiverar anti-fusket för paus-buffring",
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD": "Automatisk låtnedladdning",
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Laddar automatiskt ned låtar när nivåsidan öppnas",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/CBF/HACK_CBF": "",
-  "LEVEL/CBF/HACK_CBF/TIP": "",
-  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
-  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "Klicka mellan bildrutor",
+  "LEVEL/CBF/HACK_CBF/TIP": "Växlar Klick Mellan Bildrutor av Syzzi (måste vara installerad)",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Klicka på steg",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Registrerar endast inmatning med 240 tps precision, samtidigt som vanilla-fysiken behålls",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Kringgå kontrollpunktsgräns",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Tar bort gränsen på 50 kontrollpunkter",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Samla mynt i övningsläget",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE/TIP": "Tillåter guldmynt och användarmynt att plockas upp i övningsläget. Skapat av WEGFan",
-  "LEVEL/HACK_CONFIRM_EXIT": "",
-  "LEVEL/HACK_CONFIRM_EXIT/TIP": "",
+  "LEVEL/HACK_CONFIRM_EXIT": "Bekräfta utgång",
+  "LEVEL/HACK_CONFIRM_EXIT/TIP": "Kräver bekräftelse innan en nivå lämnas",
   "LEVEL/HACK_CONFIRM_FULL_RESET": "Bekräfta hel återställning",
   "LEVEL/HACK_CONFIRM_FULL_RESET/TIP": "Kräver bekräftelse innan nivån återställs helt",
   "LEVEL/HACK_CONFIRM_NORMAL": "Bekräfta normalläge",
@@ -312,10 +312,10 @@
   "LEVEL/HACK_FORCE_PLATFORMER/TIP": "Aktiverar plattformsläge på alla nivåer",
   "LEVEL/HACK_INSTANT_COMPLETE": "Klara omedelbart",
   "LEVEL/HACK_INSTANT_COMPLETE/TIP": "Teleporterar spelaren till slutet av en nivå",
-  "LEVEL/HACK_JUMP_HACK": "",
-  "LEVEL/HACK_JUMP_HACK/TIP": "",
-  "LEVEL/HACK_PAUSE_DURING_COMPLETE": "",
-  "LEVEL/HACK_PAUSE_DURING_COMPLETE/TIP": "",
+  "LEVEL/HACK_JUMP_HACK": "Hopp hack",
+  "LEVEL/HACK_JUMP_HACK/TIP": "Oändlig hopp höjd",
+  "LEVEL/HACK_PAUSE_DURING_COMPLETE": "Pausa under slutförande",
+  "LEVEL/HACK_PAUSE_DURING_COMPLETE/TIP": "Tillåter pausning under nivån-slutförande animeringen",
   "LEVEL/HACK_PRACTICE_BUG_FIX": "Buggfix till övningsläge",
   "LEVEL/HACK_PRACTICE_BUG_FIX/TIP": "Sparar och återställer spelarens hastighet i övningsläge",
   "LEVEL/HACK_PRACTICE_MUSIC": "Musik i övningsläget",
