--- a/langs/de-DE.json
+++ b/langs/de-DE.json
@@ -97,6 +97,8 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "",
+  "COSMETIC/HACK_NO_CIRCLES": "",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Klassische Partikeleffekte",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Stellt die klassischen Mini-Partikeleffekte wieder her, die den Spieler begleiten",
   "COSMETIC/HACK_CLASSIC_PULSE": "",
