--- a/langs/en-GB.json
+++ b/langs/en-GB.json
@@ -97,6 +97,8 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 Decimal Place",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Ball Rotation Bug",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Recreates the 2.0 barrel-roll bug",
+  "COSMETIC/HACK_NO_CIRCLES": "No Circle Effect",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "Removes circle effect from pads, orbs, and portals",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Classic Particles",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Restores classic mini particles that followed the player",
   "COSMETIC/HACK_CLASSIC_PULSE": "Classic Pulse",
@@ -188,14 +190,14 @@
   "COSMETIC/HACK_SOLID_WAVE_TRAIL/TIP": "No blending on the wave trail, like the black & white trail",
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA": "StartPos Reset Camera",
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Force resets each StartPos's camera",
-  "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Stop Triggers On Death",
+  "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Stop Triggers on Death",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Stops move/rotation triggers on death so you can see what killed you",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Trail Cutting",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Brings back the trail cutting bug",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Rate (x)",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "Rate",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "x",
-  "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Wave Trail On Death",
+  "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Wave Trail on Death",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Keeps wave trail visible on death",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Wave Pulse Multiplier",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE/SUF": "x",
@@ -246,7 +248,7 @@
   "LEVEL/AUTO_DEAFEN/DROPDOWN/UNDEAFEN_AT": "Undeafen at",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/UNDEAFEN_AT/PRE": "Undeafen at",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/UNDEAFEN_AT/SUF": "%",
-  "LEVEL/AUTO_DEAFEN/DROPDOWN/UNDEAFEN_ON_PAUSE": "Undeafen On Pause",
+  "LEVEL/AUTO_DEAFEN/DROPDOWN/UNDEAFEN_ON_PAUSE": "Undeafen on Pause",
   "LEVEL/AUTO_DEAFEN/HACK_AUTO_DEAFEN": "Auto Deafen",
   "LEVEL/AUTO_DEAFEN/HACK_AUTO_DEAFEN/TIP": "Deafens user in Discord after a certain %",
   "LEVEL/AUTO_MUSIC_SYNC/DROPDOWN/NO_LEGACY_SYNC": "No Legacy Sync",
@@ -365,10 +367,10 @@
   "LEVEL/NOCLIP/HACK_NOCLIP/TIP": "Makes the player invincible.",
   "LEVEL/NOCLIP_LIMITS/DROPDOWN/ACCURACY_LIMIT": "Accuracy Limit",
   "LEVEL/NOCLIP_LIMITS/DROPDOWN/ACCURACY_LIMIT/SUF": "%",
-  "LEVEL/NOCLIP_LIMITS/DROPDOWN/ACCURACY_LIMIT_ON": "Accuracy Limit On",
+  "LEVEL/NOCLIP_LIMITS/DROPDOWN/ACCURACY_LIMIT_ON": "Accuracy Limit",
   "LEVEL/NOCLIP_LIMITS/DROPDOWN/DEATHS_LIMIT": "Deaths Limit",
   "LEVEL/NOCLIP_LIMITS/DROPDOWN/DEATHS_LIMIT/SUF": " Deaths",
-  "LEVEL/NOCLIP_LIMITS/DROPDOWN/DEATH_LIMIT_ON": "Death Limit On",
+  "LEVEL/NOCLIP_LIMITS/DROPDOWN/DEATH_LIMIT_ON": "Death Limit",
   "LEVEL/NOCLIP_LIMITS/HACK_NOCLIP_LIMITS": "Noclip Limits",
   "LEVEL/NOCLIP_LIMITS/HACK_NOCLIP_LIMITS/TIP": "Kills the player after certain accuracy thresholds, requires Noclip",
   "LEVEL/NO_COLLISION/HACK_NO_COLLISION": "No Collision",
