--- a/langs/eu-ES.json
+++ b/langs/eu-ES.json
@@ -97,6 +97,8 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "Lau Dezimal",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Ball Biraketaren Bug-a",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "2.0 bertsioaren 'Ball Barrel-Roll' errorea birsortzen du",
+  "COSMETIC/HACK_NO_CIRCLES": "",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Partikula Klasikoak",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Mini-jokalariari jarraitzen zieten partikulak berrezartzen ditu",
   "COSMETIC/HACK_CLASSIC_PULSE": "Taupada Klasikoa",
