--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -97,6 +97,8 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 знака после запятой",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Баг вращения",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Воссоздает баг из 2.0 из-за которого переход из шара в другие режимы мог начинать эффект бочки",
+  "COSMETIC/HACK_NO_CIRCLES": "",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Классические частицы",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Возвращает частицы, которые следуют за игроком на мини режимах",
   "COSMETIC/HACK_CLASSIC_PULSE": "Классические пульсации",
@@ -394,7 +396,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/SUF": "%",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "Проходимые",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "Игрок",
- "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "Колизия соприкосновения",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "Колизия соприкосновения",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "Только активные",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "Твёрдые",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "Специальные",
