--- a/langs/zh-HK.json
+++ b/langs/zh-HK.json
@@ -97,6 +97,8 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "球模式側翻缺陷",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "從新做出2.0的球模式側翻缺陷",
+  "COSMETIC/HACK_NO_CIRCLES": "",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "原始粒子",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "恢復跟隨玩家的原始小粒子",
   "COSMETIC/HACK_CLASSIC_PULSE": "",
