--- a/langs/ar-SA.json
+++ b/langs/ar-SA.json
@@ -97,6 +97,8 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "",
+  "COSMETIC/HACK_NO_CIRCLES": "",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "جسيمات كلاسيكية",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "يستعيد الجسيمات الصغيرة الكلاسيكية التي تتبع اللاعب",
   "COSMETIC/HACK_CLASSIC_PULSE": "",
