--- a/langs/de-CH.json
+++ b/langs/de-CH.json
@@ -97,6 +97,8 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "",
+  "COSMETIC/HACK_NO_CIRCLES": "",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Klassischi Partiku",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Bringt di alte Minipartiku, wo dich verfolge, zrugg is Spiel",
   "COSMETIC/HACK_CLASSIC_PULSE": "",
