--- a/langs/el-GR.json
+++ b/langs/el-GR.json
@@ -97,6 +97,8 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Επαναδημιουργεί το 2.0 barrel-roll bug",
+  "COSMETIC/HACK_NO_CIRCLES": "",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Κλασικά Σωματίδια",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Επαναφέρει τα κλασικά μίνι σωματίδια που ακολούθησαν τη συσκευή αναπαραγωγής",
   "COSMETIC/HACK_CLASSIC_PULSE": "Κλασικός Παλμός",
