--- a/langs/es-AR.json
+++ b/langs/es-AR.json
@@ -97,6 +97,8 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "",
+  "COSMETIC/HACK_NO_CIRCLES": "",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Partículas clásicas",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Vuelve a traer las partículas chicas clásicas que siguen al jugador",
   "COSMETIC/HACK_CLASSIC_PULSE": "",
