--- a/langs/es-CO.json
+++ b/langs/es-CO.json
@@ -97,6 +97,8 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Bug de Giro de Bola",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Recrea el bug de giro de la bola de la 2.0",
+  "COSMETIC/HACK_NO_CIRCLES": "",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Partículas Clásicas",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Restablece las partículas mini clásicas que seguían al jugador",
   "COSMETIC/HACK_CLASSIC_PULSE": "",
