--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -97,6 +97,8 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "Cuatro decimales",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Bug de rotación de la ball",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Recrea el bug de la rotación de la ball de la 2.0",
+  "COSMETIC/HACK_NO_CIRCLES": "",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Partículas clásicas",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Restaura las minipartículas clásicas que siguen al jugador",
   "COSMETIC/HACK_CLASSIC_PULSE": "Pulsación clásica",
