--- a/langs/et-EE.json
+++ b/langs/et-EE.json
@@ -97,6 +97,8 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "",
+  "COSMETIC/HACK_NO_CIRCLES": "",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Vanad Osakesed",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Tagastab mängijale järgmised klassikalised osakesed",
   "COSMETIC/HACK_CLASSIC_PULSE": "",
