--- a/langs/fi-FI.json
+++ b/langs/fi-FI.json
@@ -97,6 +97,8 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "",
+  "COSMETIC/HACK_NO_CIRCLES": "",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Vanhat Partikkelit",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Palauttaa klassiset partikkelit, jotka seurasivat pelaajaa",
   "COSMETIC/HACK_CLASSIC_PULSE": "",
