--- a/langs/fr-FR.json
+++ b/langs/fr-FR.json
@@ -97,6 +97,8 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Bug de rotation (boule)",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Recréé le bug de rotation en \"tonneau\" de la v2.0 sur la boule",
+  "COSMETIC/HACK_NO_CIRCLES": "",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Particules Classiques",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Restaure les mini particules classiques qui suivent le personnage",
   "COSMETIC/HACK_CLASSIC_PULSE": "Pulsations classiques",
