--- a/langs/hu-HU.json
+++ b/langs/hu-HU.json
@@ -97,6 +97,8 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 számjegy",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Ball forgási bug",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Visszahoz egy régi bugot a ballból lévő transitionöknél (teljesen vizuális)",
+  "COSMETIC/HACK_NO_CIRCLES": "",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Régi részecskék",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Visszahozza a klasszikus kis részecskéket amik követték a játékost",
   "COSMETIC/HACK_CLASSIC_PULSE": "Klasszikus pulzálás",
