--- a/langs/it-IT.json
+++ b/langs/it-IT.json
@@ -97,6 +97,8 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 Posizioni Decimali",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Bug Rotazione Ball",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Ricrea il Bug 'barrel-log' della 2.0",
+  "COSMETIC/HACK_NO_CIRCLES": "",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Particelle Classiche",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Riporta le mini particelle che seguivano il giocatore",
   "COSMETIC/HACK_CLASSIC_PULSE": "Pulsazione Classica",
