--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -97,6 +97,8 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "소수점 4자리",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "볼 회전 버그",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "2.0 버전의 배럴 롤 버그를 재현합니다.",
+  "COSMETIC/HACK_NO_CIRCLES": "",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "기본 파티클",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "플레이어를 따라다니는 기본 미니 파티클을 복원합니다.",
   "COSMETIC/HACK_CLASSIC_PULSE": "클래식 펄스",
