--- a/langs/nl-NL.json
+++ b/langs/nl-NL.json
@@ -97,6 +97,8 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "",
+  "COSMETIC/HACK_NO_CIRCLES": "",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Klassieke Deeltjes",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Herstelt klassieke minideeltjes die de speler volgden",
   "COSMETIC/HACK_CLASSIC_PULSE": "",
