--- a/langs/pl-PL.json
+++ b/langs/pl-PL.json
@@ -97,6 +97,8 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 Miejsce Dziesiętne",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Ball Rotation Bug",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Odtwarza bug obracania (barrel-roll) z wersji 2.0",
+  "COSMETIC/HACK_NO_CIRCLES": "",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Klasyczne Cząsteczki",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Przywraca klasyczne cząsteczki, które podążały za graczem",
   "COSMETIC/HACK_CLASSIC_PULSE": "Klasyczny Puls",
