--- a/langs/pt-BR.json
+++ b/langs/pt-BR.json
@@ -97,6 +97,8 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 Dígitos Decimais",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Bug de Rotação da Bola",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Recria o bug da rotação da bola da 2.0",
+  "COSMETIC/HACK_NO_CIRCLES": "",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Partículas clássicas",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Restaura as mini partículas clássicas que seguiam o jogador",
   "COSMETIC/HACK_CLASSIC_PULSE": "Pulsamento Clássico",
