--- a/langs/vi-VN.json
+++ b/langs/vi-VN.json
@@ -97,6 +97,8 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "",
+  "COSMETIC/HACK_NO_CIRCLES": "",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Particle cổ điển",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Khôi phục các mini particle theo sau người chơi",
   "COSMETIC/HACK_CLASSIC_PULSE": "",
