--- a/langs/zh-CN.json
+++ b/langs/zh-CN.json
@@ -97,6 +97,8 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "ball旋转bug",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "重现2.0的ball翻滚bug",
+  "COSMETIC/HACK_NO_CIRCLES": "",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "经典粒子",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "恢复跟随玩家的经典小粒子",
   "COSMETIC/HACK_CLASSIC_PULSE": "经典脉冲",
