Update Swedish translations in sv-SE.json

--- a/langs/sv-SE.json
+++ b/langs/sv-SE.json
@@ -373,7 +373,7 @@
   "LEVEL/NOCLIP_LIMITS/DROPDOWN/DEATH_LIMIT_ON": "Dödsgräns på",
   "LEVEL/NOCLIP_LIMITS/HACK_NOCLIP_LIMITS": "Noclipgränser",
   "LEVEL/NOCLIP_LIMITS/HACK_NOCLIP_LIMITS/TIP": "Dödar spelaren efter vissa noggrannhetströsklar, kräver Noclip",
-  "LEVEL/NO_COLLISION/HACK_NO_COLLISION": "",
+  "LEVEL/NO_COLLISION/HACK_NO_COLLISION": "Ingen kollision",
   "LEVEL/NO_COLLISION/DROPDOWN/HAZARDS": "",
   "LEVEL/NO_COLLISION/DROPDOWN/SLOPES": "",
   "LEVEL/NO_COLLISION/DROPDOWN/SOLIDS": "",
@@ -501,8 +501,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
   "CHEAT_SAFETY": "",
-  "CHEAT_SAFETY/RULESET": "",
-  "CHEAT_SAFETY/DISABLE_CHEATS": "",
+  "CHEAT_SAFETY/RULESET": "Regler",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "Inaktivera fusk",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Automatiskt säkert läge",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Aktiverar säkert läge endast när fusk är aktiverat",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Säkert läge",
