Update Swedish translations

--- a/langs/sv-SE.json
+++ b/langs/sv-SE.json
@@ -431,12 +431,12 @@
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER": "StartPos-växlare",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER/TIP": "Tillåter växling emellan flera startpositioner",
   "UNIVERSAL": "Universell",
-  "UNIVERSAL/CUSTOM_BG/HACK_CUSTOM_BG": "",
-  "UNIVERSAL/CUSTOM_BG/HACK_CUSTOM_BG/TIP": "",
+  "UNIVERSAL/CUSTOM_BG/HACK_CUSTOM_BG": "Anpassad bakgrund",
+  "UNIVERSAL/CUSTOM_BG/HACK_CUSTOM_BG/TIP": "Anpassa färgen på GD-menyerna",
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME": "Tillåt låg volym",
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Tillåter volymen att sänkas till tre procent eller lägre",
-  "UNIVERSAL/HACK_COMPACT_LISTS": "",
-  "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
+  "UNIVERSAL/HACK_COMPACT_LISTS": "Kompakta listor",
+  "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "Minskar höjden på listor och profilkommentarer",
   "UNIVERSAL/HACK_FAST_CHESTS": "Snabba kistor",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Påskyndar kistanimationen",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
