Update translations for sv-SE.json

--- a/langs/sv-SE.json
+++ b/langs/sv-SE.json
@@ -449,8 +449,8 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Ingen övergång",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Förkortar scenövergångstiden till 0s",
-  "UNIVERSAL/HACK_TRANSPARENT_LISTS": "",
-  "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "",
+  "UNIVERSAL/HACK_TRANSPARENT_LISTS": "Genomskinliga listor",
+  "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "Tar bort bakgrunden från listvyer",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Oktaver",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH/PRE": "Oktaver",
   "UNIVERSAL/PITCH_SHIFTER/HACK_PITCH_SHIFTER": "Tonhöjdsväxlare",
