Update Swedish translations for various hacks

--- a/langs/sv-SE.json
+++ b/langs/sv-SE.json
@@ -290,8 +290,8 @@
   "LEVEL/HACK_ALLOW_PAUSE_BUFFERING/TIP": "Inaktiverar anti-fusket för paus-buffring",
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD": "Automatisk låtnedladdning",
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Laddar automatiskt ned låtar när nivåsidan öppnas",
-  "LEVEL/HACK_AUTO_START_POS": "",
-  "LEVEL/HACK_AUTO_START_POS/TIP": "",
+  "LEVEL/HACK_AUTO_START_POS": "Automatisk StartPos",
+  "LEVEL/HACK_AUTO_START_POS/TIP": "Placerar automatiskt StartPositions vid portaler",
   "LEVEL/CBF/HACK_CBF": "Klicka mellan bildrutor",
   "LEVEL/CBF/HACK_CBF/TIP": "Växlar Klick Mellan Bildrutor av Syzzi (måste vara installerad)",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Klicka på steg",
@@ -330,8 +330,8 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "",
   "LEVEL/HACK_SHOW_LAYOUT": "Visa layout",
   "LEVEL/HACK_SHOW_LAYOUT/TIP": "Tar bort all dekoration och färg från nivåerna",
-  "LEVEL/HACK_SHOW_TRAJECTORY": "",
-  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "",
+  "LEVEL/HACK_SHOW_TRAJECTORY": "Visa bana",
+  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "Ritar de förutsagda banorna för en spelare vid kontinuerliga knapptryckningar/knappsläpp",
   "LEVEL/HACK_SHOW_TRIGGERS": "Visa triggers",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Visar triggers i nivå",
   "LEVEL/HACK_SHIPCOPTER": "",
