--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -46,8 +46,8 @@
   "HOME/ANIM_SPEED/PRE": "Анимации",
   "HOME/ANIM_SPEED/SUF": "мс",
   "HOME/CONTRIBUTE_TRANSLATIONS": "Поучавствовать в переводе",
-  "HOME/DOT": "Индикатор точка",
-  "HOME/DOT/TIP": "Добавляет внутриигровой точку-индикатор в интерфейс Mega Hack (К примеру Iconic или Mobile)",
+  "HOME/DOT": "Точка-индикатор",
+  "HOME/DOT/TIP": "Добавляет внутриигровую точку-индикатор в интерфейс Mega Hack (К примеру Iconic или Mobile)",
   "HOME/SHORTCUT/ALT": "Горячая клавиша",
   "HOME/SHORTCUT/ICONIC": "Иконки",
   "HOME/SORT_TABS": "Сортировка интерфейса",
@@ -102,7 +102,7 @@
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Классические частицы",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Возвращает частицы, которые следуют за игроком на мини режимах",
   "COSMETIC/HACK_CLASSIC_PULSE": "Классические пульсации",
-  "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Возвращает пульсации выше 60 Гц, как в pre-2.1",
+  "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Возвращает пульсации выше 60 Гц, как в версиях до 2.1",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Классический след волны",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Реализует след волны из 2.1",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "Заморозить анимации",
@@ -166,7 +166,7 @@
   "COSMETIC/HACK_NO_PORTAL_LIGHTNING/TIP": "Отключает молнии, которые появляются при входе в порталы изменения размера",
   "COSMETIC/HACK_NO_PULSE": "Без пульсаций",
   "COSMETIC/HACK_NO_PULSE/TIP": "Отключает пульсации объектов",
-  "COSMETIC/HACK_NO_RESPAWN_FLASH": "Без вспышки позрождения",
+  "COSMETIC/HACK_NO_RESPAWN_FLASH": "Без вспышки возрождения",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Отключает вспышку и круг при появлении игрока",
   "COSMETIC/HACK_NO_SHADERS": "Без шейдеров",
   "COSMETIC/HACK_NO_SHADERS/TIP": "Отключает все шейдеры в уровне",
@@ -286,7 +286,7 @@
   "LEVEL/HACK_0_PRACTICE_COMPLETE/TIP": "Проходит уровень, если он был пройден в практике за 1 попытку",
   "LEVEL/HACK_ALL_MODES_PLATFORMER": "Все режимы в платформере",
   "LEVEL/HACK_ALL_MODES_PLATFORMER/TIP": "Позволяет всем режимам работать в платформере",
-  "LEVEL/HACK_ALLOW_PAUSE_BUFFERING": "Разрешить много пауз",
+  "LEVEL/HACK_ALLOW_PAUSE_BUFFERING": "Разрешить бафферинг пауз",
   "LEVEL/HACK_ALLOW_PAUSE_BUFFERING/TIP": "Отключает защиту, которая появляется при быстром включении и выключении паузы",
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD": "Автоматическое скачивание музыки",
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Автоматически скачивает музыку при открытии страницы уровня",
@@ -378,9 +378,9 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SLOPES": "Наклонные поверхности",
   "LEVEL/NO_COLLISION/DROPDOWN/SOLIDS": "Твёрдые",
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "Специальные",
-  "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Семя",
-  "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Семя",
-  "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Семя рандома",
+  "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Сид",
+  "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Сид",
+  "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Сид рандома",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Заставляет триггеры рандома каждый раз запускаться с одним и тем же сидом (так же работает в практике)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "Время (мс)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER/SUF": "мс",
